CW/OS/project/k8s/00-namespace-secret-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
