CW/OS/project/k8s/10-flask-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app-one
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-app-one
  template:
    metadata:
      labels:
        app: auth-app-one
    spec:
      serviceAccountName: flask-secret-app
      containers:
        - name: flask
          image: flask-secret-auth:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-app-one-service
  namespace: app
spec:
  selector:
    app: auth-app-one
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app-two
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-app-two
  template:
    metadata:
      labels:
        app: auth-app-two
    spec:
      serviceAccountName: flask-secret-app
      containers:
        - name: flask
          image: flask-secret-auth:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-app-two-service
  namespace: app
spec:
  selector:
    app: auth-app-two
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app-three
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-app-three
  template:
    metadata:
      labels:
        app: auth-app-three
    spec:
      serviceAccountName: flask-secret-app
      containers:
        - name: flask
          image: flask-secret-auth:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-app-three-service
  namespace: app
spec:
  selector:
    app: auth-app-three
  ports:
    - port: 80
      targetPort: 5000
